# emanote.obelisk

./: .gitattributes  .gitignore  Architecture.html  Development.html  Features.html  Keep_It_Simple,_Stupid.html  LICENSE  Main.hs  Pretty_URLs.html  Procfile  README.md  SECURITY.md  cache.json  default.nix  docker.nix  emanote.cabal  g.cabal  hie.yaml  impulse.html  index.html  shell.nix
.github/workflows/: ci.yaml  publish.yaml
.obelisk/impl/: github.json
algebraic-graphs-patch/: algebraic-graphs-patch.cabal
algebraic-graphs-patch/src/Algebra/Graph/Labelled/AdjacencyMap/: Patch.hs
backend/: backend.cabal
backend/src/: Backend.hs
common/: common.cabal
common/src/Common/: Api.hs  Route.hs  Search.hs
config/backend/: notesDir  siteBlurb.md
config/common/: siteTitle
dep/: README.md
dep/alga/: github.json
dep/gitignoresrc/: github.json
dep/haskell.nix/: github.json
dep/pandoc-link-context/: github.json
dep/reflex-dom-pandoc/: github.json
dep/reflex-gadt-api/: github.json
dep/relude/: github.json
dep/with-utf8/: github.json
doc/: Architecture.md  Dev.md  Development.md  Directory Hierarchy.md  Docker test-drive.md  Features.md  KISS.md  Keep It Simple, Stupid.md  Playground.md  Pretty URLs.md  index.html  index.md  neuron.dhall  style.css
doc/templates/: note.html
emanote/: emanote.cabal
emanote-cli/: default.nix  docker.nix  emanote-cli.cabal
emanote-cli/dep/nixpkgs/: github.json
emanote-cli/src/: Main.hs
emanote-cli/src/Data/Conflict/: Patch.hs
emanote-cli/src/Emanote/: Markdown.hs  Pipeline.hs  WebServer.hs  Zk.hs
emanote-core/: CHANGELOG.md  emanote-core.cabal
emanote-core/src/Data/: Conflict.hs
emanote-core/src/Emanote/: Graph.hs
emanote-core/src/Emanote/Graph/: Patch.hs
emanote-core/src/Emanote/Markdown/: WikiLink.hs
emanote-core/src/Emanote/Zk/: Type.hs
emanote/src/: Emanote.hs
emanote/src/Emanote/: FileSystem.hs  Markdown.hs  Pipeline.hs  WebServer.hs  Zk.hs
emanote/src/Emanote/Markdown/WikiLink/: Parser.hs
emanote/src/Reflex/: TIncremental.hs
frontend/: frontend.cabal
frontend/src/: Frontend.hs
frontend/src/Frontend/: App.hs  Search.hs  Static.hs  Widget.hs
lib/algebraic-graphs-patch/: algebraic-graphs-patch.cabal
lib/algebraic-graphs-patch/src/Algebra/Graph/Labelled/AdjacencyMap/: Patch.hs
lib/emanote/: default.nix  emanote.cabal
lib/emanote-core/: emanote-core.cabal
lib/emanote-core/src/Data/Conflict/: Patch.hs
lib/emanote-core/src/Emanote/: Graph.hs
lib/emanote-core/src/Emanote/Markdown/: WikiLink.hs
lib/emanote-core/src/Emanote/Zk/: Type.hs
lib/emanote/src/Emanote/: FileSystem.hs  Markdown.hs  Pipeline.hs  Zk.hs
lib/emanote/src/Reflex/: TIncremental.hs
snaplets/heist/templates/: base.tpl  index.tpl
src/: Main.hs
src/Emanote/: Db.hs  FileSystem.hs  Graph.hs  Pipeline.hs  WebServer.hs  Zk.hs
src/Emanote/Db/: Reflex.hs
src/Emanote/Db/Types/: Zk.hs
src/Emanote/Db/Types/Zk/: Patch.hs
src/Emanote/Graph/: Patch.hs
src/Emanote/Markdown/: WikiLink.hs
src/G/: Db.hs  FileSystem.hs  Graph.hs  Markdown.hs  Pipeline.hs  WebServer.hs
src/G/Db/: Reflex.hs
src/G/Db/Types/: Zk.hs
src/G/Db/Types/Zk/: Patch.hs
src/G/Graph/: Patch.hs
src/G/Markdown/: WikiLink.hs
src/Reflex/: TIncremental.hs
static/: main-compiled.css
static/style/: main.css
style/: main.css  node-packages.nix  package-lock.json  package.json
