cabal-version:      3.0
name:               g
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Sridhar Ratnakumar
maintainer:         srid@srid.ca
extra-source-files: CHANGELOG.md

executable g
  main-is:            Main.hs
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Extra)

  hs-source-dirs:     src
  exposed-modules:
    Data.Conflict
    Data.Conflict.Patch
    G.Markdown
    G.Markdown.WikiLink

  build-depends:
    , algebraic-graphs
    , base
    , commonmark
    , commonmark-extensions
    , commonmark-pandoc
    , containers
    , directory
    , filepath
    , filepattern
    , fsnotify
    , megaparsec
    , pandoc-types
    , parsec
    , parser-combinators
    , reflex
    , reflex-dom-core
    , reflex-dom-pandoc
    , reflex-fsnotify
    , relude
    , shower
    , tagged
    , text
    , time

  default-extensions:
    DeriveGeneric
    FlexibleContexts
    LambdaCase
    MultiWayIf
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  default-language:   Haskell2010
