cabal-version:      3.0
name:               g
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Sridhar Ratnakumar
maintainer:         srid@srid.ca
extra-source-files: CHANGELOG.md
data-files:
  snaplets/heist/templates/base.tpl
  snaplets/heist/templates/index.tpl

executable g
  main-is:            Main.hs
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Extra)

  hs-source-dirs:     src
  other-modules:
    Data.Conflict
    Data.Conflict.Patch
    G.Db
    G.FileSystem
    G.Markdown
    G.Markdown.WikiLink
    G.WebServer

  build-depends:
    , algebraic-graphs
    , async
    , base
    , commonmark
    , commonmark-extensions
    , commonmark-pandoc
    , containers
    , directory
    , filepath
    , filepattern
    , fsnotify
    , heist
    , megaparsec
    , optparse-applicative
    , pandoc-types
    , parsec
    , parser-combinators
    , reflex
    , reflex-dom-core
    , reflex-dom-pandoc
    , reflex-fsnotify
    , relude
    , shower
    , snap
    , snap-core
    , snap-server
    , stm
    , tagged
    , text
    , time
    , with-utf8
    , lens

  default-extensions:
    DeriveGeneric
    FlexibleContexts
    LambdaCase
    MultiWayIf
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  default-language:   Haskell2010
