cabal-version:      3.0
name:               g
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Sridhar Ratnakumar
maintainer:         srid@srid.ca
extra-source-files: CHANGELOG.md

executable g
  main-is:            Main.hs
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Extra)

  hs-source-dirs:     src
  other-modules:
    Data.Conflict
    Data.Conflict.Patch
    G.Db
    G.FileSystem
    G.Graph
    G.Markdown
    G.Markdown.WikiLink
    G.WebServer

  build-depends:
    , algebraic-graphs
    , async
    , base
    , commonmark
    , commonmark-extensions
    , commonmark-pandoc
    , containers
    , data-default
    , directory
    , filepath
    , filepattern
    , fsnotify
    , megaparsec
    , optparse-applicative
    , pandoc-link-context
    , pandoc-types
    , parsec
    , parser-combinators
    , reflex
    , reflex-dom-core
    , reflex-dom-pandoc
    , reflex-fsnotify
    , relude
    , shower
    , stm
    , tagged
    , text
    , time
    , with-utf8
    , scotty

  default-extensions:
    DeriveGeneric
    FlexibleContexts
    LambdaCase
    MultiWayIf
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns
    RecordWildCards

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  default-language:   Haskell2010
