name:          backend
version:       0.1
cabal-version: >=1.8
build-type:    Simple

library
  hs-source-dirs:     src

  if impl(ghcjs)
    buildable: False

  build-depends:
      aeson
    , async
    , base
    , common
    , constraints-extras
    , containers
    , emanote
    , emanote-core
    , frontend
    , obelisk-backend
    , obelisk-executable-config-lookup
    , obelisk-route
    , pandoc-types
    , reflex-gadt-api
    , relude
    , snap-core
    , some
    , text
    , websockets
    , websockets-snap

  exposed-modules:    Backend
  default-extensions:
    NoImplicitPrelude
    DeriveGeneric
    FlexibleContexts
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns

  ghc-options:
    -Wall -Wredundant-constraints -Wincomplete-uni-patterns
    -Wincomplete-record-updates -O -fno-show-valid-hole-fits

executable backend
  main-is:        main.hs
  hs-source-dirs: src-bin
  ghc-options:
    -Wall -Wredundant-constraints -Wincomplete-uni-patterns
    -Wincomplete-record-updates -O -threaded -fno-show-valid-hole-fits

  if impl(ghcjs)
    buildable: False

  build-depends:
      backend
    , base
    , common
    , frontend
    , obelisk-backend
