name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , obelisk-route
               , mtl
               , text
               , reflex-gadt-api 
               , constraints-extras 
               , dependent-sum-template
               , aeson-gadt-th 
               , aeson
               , relude
               , reflex-dom-core
               , emanote-core
  exposed-modules:
    Common.Api
    Common.Route
  default-extensions:
    DeriveGeneric
    FlexibleContexts
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns
    NoImplicitPrelude


  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
