name:          common
version:       0.1
cabal-version: >=1.2
build-type:    Simple

library
  hs-source-dirs:     src
  build-depends:
      aeson
    , aeson-gadt-th
    , base
    , constraints-extras
    , dependent-sum-template
    , emanote-core
    , lens
    , mtl
    , obelisk-route
    , pandoc-types
    , reflex-dom-core
    , reflex-gadt-api
    , relude
    , tagged
    , text

  exposed-modules:
    Common.Api
    Common.Route

  default-extensions:
    NoImplicitPrelude
    DeriveGeneric
    FlexibleContexts
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns

  ghc-options:
    -Wall -Wredundant-constraints -Wincomplete-uni-patterns
    -Wincomplete-record-updates -O -fno-show-valid-hole-fits
