cabal-version:      2.4
name:               emanote-cli
version:            0.1.0.0
license:            AGPL-3.0-only
author:             Sridhar Ratnakumar
maintainer:         srid@srid.ca

executable emanote
  main-is:            Main.hs
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Extra)

  hs-source-dirs:     src
  other-modules:
    Emanote.FileSystem
    Emanote.Markdown
    Emanote.Markdown.WikiLink.Parser
    Emanote.Pipeline
    Emanote.WebServer
    Emanote.Zk
    Reflex.TIncremental

  build-depends:
    , emanote-core
    , algebraic-graphs
    , async
    , base
    , commonmark
    , commonmark-extensions
    , commonmark-pandoc
    , containers
    , data-default
    , directory
    , filepath
    , filepattern
    , fsnotify
    , uri-encode
    , megaparsec
    , mustache
    , optparse-applicative
    , pandoc-link-context
    , pandoc-types
    , parsec
    , parser-combinators
    , reflex
    , reflex-dom-core
    , reflex-dom-pandoc
    , reflex-fsnotify
    , relude
    , scotty
    , shower
    , stm
    , tagged
    , text
    , time
    , wai-middleware-static
    , with-utf8

  default-extensions:
    DeriveGeneric
    FlexibleContexts
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  default-language:   Haskell2010
