cabal-version:      3.0
name:               emanote-core
version:            0.1.0.0
license:            AGPL-3.0-only
author:             Sridhar Ratnakumar
maintainer:         srid@srid.ca
extra-source-files: CHANGELOEmanote.md

library
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Extra)

  hs-source-dirs:     src
  exposed-modules:
    Data.Conflict
    Data.Conflict.Patch
    Emanote.Graph
    Emanote.Graph.Patch
    Emanote.Markdown.WikiLink

  build-depends:
    , algebraic-graphs
    , async
    , base
    , commonmark
    , commonmark-extensions
    , commonmark-pandoc
    , containers
    , data-default
    , directory
    , filepath
    , filepattern
    , uri-encode
    , megaparsec
    , pandoc-link-context
    , pandoc-types
    , parsec
    , parser-combinators
    , reflex
    , reflex-dom-core
    , reflex-dom-pandoc
    , relude
    , shower
    , tagged
    , text
    , time

  default-extensions:
    DeriveGeneric
    FlexibleContexts
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  default-language:   Haskell2010
