cabal-version:      2.4
name:               emanote-core
version:            0.1.0.0
license:            AGPL-3.0-only
author:             Sridhar Ratnakumar
maintainer:         srid@srid.ca
extra-source-files: CHANGELOEmanote.md

library
  hs-source-dirs:     src
  exposed-modules:
    Data.Conflict
    Data.Conflict.Patch
    Emanote.Graph
    Emanote.Graph.Patch
    Emanote.Markdown.WikiLink
    Emanote.Zk.Type

  build-depends:
    , aeson
    , algebraic-graphs
    , async
    , base
    , commonmark
    , commonmark-extensions
    , commonmark-pandoc
    , containers
    , data-default
    , directory
    , filepath
    , filepattern
    , megaparsec
    , pandoc-link-context
    , pandoc-types
    , parsec
    , parser-combinators
    , reflex
    , reflex-dom-core
    , reflex-dom-pandoc
    , relude
    , shower
    , tagged
    , text
    , time
    , uri-encode

  default-extensions:
    NoImplicitPrelude
    DeriveGeneric
    FlexibleContexts
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  default-language:   Haskell2010
