name:          frontend
version:       0.1
cabal-version: >=1.8
build-type:    Simple

library
  hs-source-dirs:     src
  build-depends:
      aeson
    , base
    , common
    , constraints-extras
    , containers
    , emanote-core
    , ghcjs-dom
    , jsaddle
    , jsaddle-dom
    , keycode
    , lens
    , obelisk-executable-config-lookup
    , obelisk-frontend
    , obelisk-generated-static
    , obelisk-route
    , pandoc-types
    , reflex-dom
    , reflex-dom-pandoc
    , reflex-gadt-api
    , relude
    , skylighting-core
    , tagged
    , text
    , time

  exposed-modules:
    Frontend
    Frontend.App
    Frontend.Search
    Frontend.Static
    Frontend.Widget

  default-extensions:
    NoImplicitPrelude
    DeriveGeneric
    FlexibleContexts
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns

  ghc-options:
    -Wall -Wredundant-constraints -Wincomplete-uni-patterns
    -Wincomplete-record-updates -O -fno-show-valid-hole-fits

executable frontend
  main-is:        main.hs
  hs-source-dirs: src-bin
  build-depends:
      base
    , common
    , frontend
    , obelisk-frontend
    , obelisk-generated-static
    , obelisk-route
    , reflex-dom

  ghc-options:
    -threaded -O -Wall -Wredundant-constraints
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -fno-show-valid-hole-fits

  if impl(ghcjs)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER

  if os(osx)
    ghc-options: -dynamic
