cabal-version:      2.4
name:               algebraic-graphs-patch
version:            0.1.0.0
license:            AGPL-3.0-only
author:             Sridhar Ratnakumar
maintainer:         srid@srid.ca
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:     src
  exposed-modules:    Algebra.Graph.Labelled.AdjacencyMap.Patch
  build-depends:
    , algebraic-graphs
    , base
    , containers
    , patch
    , relude

  default-extensions:
    NoImplicitPrelude
    DeriveGeneric
    FlexibleContexts
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  default-language:   Haskell2010
