cabal-version: 2.4
name:          emanote
version:       0.1.0.0
license:       AGPL-3.0-only
author:        Sridhar Ratnakumar
maintainer:    srid@srid.ca

library
  hs-source-dirs:     src
  exposed-modules:
    Emanote
    Emanote.FileSystem
    Emanote.Markdown
    Emanote.Markdown.WikiLink.Parser
    Emanote.Pipeline
    Emanote.Zk
    Reflex.TIncremental

  build-depends:
    , algebraic-graphs
    , algebraic-graphs-patch
    , async
    , base
    , commonmark
    , commonmark-extensions
    , commonmark-pandoc
    , containers
    , data-default
    , directory
    , emanote-core
    , filepath
    , filepattern
    , fsnotify
    , megaparsec
    , optparse-applicative
    , pandoc-link-context
    , pandoc-types
    , parsec
    , parser-combinators
    , reflex
    , reflex-dom-core
    , reflex-dom-pandoc
    , reflex-fsnotify
    , relude
    , shower
    , stm
    , tagged
    , text
    , time
    , uri-encode
    , with-utf8

  default-extensions:
    NoImplicitPrelude
    DeriveGeneric
    FlexibleContexts
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  default-language:   Haskell2010
